be: WIP: refactor to use OpenAPI pt.6
