# internal/api/router_api.go
@@ -15,16 +15,16 @@ func apiRouterInit(router *mux.Router) error {
 	// router.HandleFunc("/api/domain/new", domainNewHandler).Methods("POST")
 	// router.HandleFunc("/api/domain/delete", domainDeleteHandler).Methods("POST")
 	// router.HandleFunc("/api/domain/clear", domainClearHandler).Methods("POST")
-	router.HandleFunc("/api/domain/sso/new", domainSsoSecretNewHandler).Methods("POST")
+	// router.HandleFunc("/api/domain/sso/new", domainSsoSecretNewHandler).Methods("POST")
 	// router.HandleFunc("/api/domain/list", domainListHandler).Methods("POST")
 	// router.HandleFunc("/api/domain/update", domainUpdateHandler).Methods("POST")
 	// router.HandleFunc("/api/domain/moderator/new", domainModeratorNewHandler).Methods("POST")
-	router.HandleFunc("/api/domain/moderator/delete", domainModeratorDeleteHandler).Methods("POST")
-	router.HandleFunc("/api/domain/statistics", domainStatisticsHandler).Methods("POST")
-	router.HandleFunc("/api/domain/import/disqus", domainImportDisqusHandler).Methods("POST")
-	router.HandleFunc("/api/domain/import/commento", domainImportCommentoHandler).Methods("POST")
-	router.HandleFunc("/api/domain/export/begin", domainExportBeginHandler).Methods("POST")
-	router.HandleFunc("/api/domain/export/download", domainExportDownloadHandler).Methods("GET")
+	// router.HandleFunc("/api/domain/moderator/delete", domainModeratorDeleteHandler).Methods("POST")
+	// router.HandleFunc("/api/domain/statistics", domainStatisticsHandler).Methods("POST")
+	// router.HandleFunc("/api/domain/import/disqus", domainImportDisqusHandler).Methods("POST")
+	// router.HandleFunc("/api/domain/import/commento", domainImportCommentoHandler).Methods("POST")
+	// router.HandleFunc("/api/domain/export/begin", domainExportBeginHandler).Methods("POST")
+	// router.HandleFunc("/api/domain/export/download", domainExportDownloadHandler).Methods("GET")
 
 	// router.HandleFunc("/api/commenter/token/new", commenterTokenNewHandler).Methods("GET")
 	// router.HandleFunc("/api/commenter/new", commenterNewHandler).Methods("POST")
@@ -38,7 +38,7 @@ func apiRouterInit(router *mux.Router) error {
 
 	// router.HandleFunc("/api/email/get", emailGetHandler).Methods("POST")
 	router.HandleFunc("/api/email/update", emailUpdateHandler).Methods("POST")
-	router.HandleFunc("/api/email/moderate", emailModerateHandler).Methods("GET")
+	// router.HandleFunc("/api/email/moderate", emailModerateHandler).Methods("GET")
 
 	router.HandleFunc("/api/oauth/google/redirect", googleRedirectHandler).Methods("GET")
 	router.HandleFunc("/api/oauth/google/callback", googleCallbackHandler).Methods("GET")
